# nonebot-plugin-giyf

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
nonebot_plugin_giyf/: __init__.py  config.py  config_manager.py
